add compel binary to install
Signed-off-by: Tycho Andersen <tycho@tycho.ws>

--- a/scripts/Makefile.install
+++ b/scripts/Makefile.install
@@ -3,6 +3,7 @@ PREFIX?= $(DESTDIR)/usr/local$
 LIBDIR?= $(PREFIX)/lib
 INCLUDEDIR?= $(PREFIX)/include
 LIBEXECDIR?= $(PREFIX)/libexec$
+BINDIR?= $(PREFIX)/bin
 
 compel.pc: compel.pc.in
 	$(Q) sed -e 's,@version@,$(VERSION),' -e 's,@libdir@,$(LIBDIR)/compel,' -e 's,@includedir@,$(INCLUDEDIR),' compel.pc.in > compel.pc
@@ -15,3 +16,4 @@ install: compel.pc
 		devel-default-libdir=$(LIBDIR) install-devel
 	$(Q) mkdir -p $(LIBDIR)/pkgconfig
 	$(Q) install -m 644 compel.pc $(LIBDIR)/pkgconfig/compel.pc
+	$(Q) install -m 555 compel $(BINDIR)/compel
