plugin and libdirs are really separate directories
Signed-off-by: Tycho Andersen <tycho@tycho.ws>

--- a/compel.pc.in
+++ b/compel.pc.in
@@ -1,5 +1,6 @@
 libdir=@libdir@
 includedir=@includedir@
+pluginlibdir=-L@pluginlibdir@
 
 Name: compel
 Description: Inject code into another process' address space
