--- a/scripts/Makefile.install
+++ b/scripts/Makefile.install
@@ -6,7 +6,11 @@ LIBEXECDIR?= $(PREFIX)/libexec$
 BINDIR?= $(PREFIX)/bin
 
 compel.pc: compel.pc.in
-	$(Q) sed -e 's,@version@,$(VERSION),' -e 's,@libdir@,$(LIBDIR)/compel,' -e 's,@includedir@,$(INCLUDEDIR),' compel.pc.in > compel.pc
+	$(Q) sed -e 's,@version@,$(VERSION),' \
+		-e 's,@libdir@,$(LIBDIR),' \
+		-e 's,@includedir@,$(INCLUDEDIR),' \
+		-e 's,@pluginlibdir@,$(LIBDIR)/compel,' \
+		compel.pc.in > compel.pc
 
 .PHONY: install
 install: compel.pc
